releng: fix detachement building
Change-Id: Ia428c9d7ad8b1f67226ca14ab3d6acedf3403a22
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>