@@ -347,7 +347,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,report_feature,emde,PublishStep_23,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,diagrams,PublishStep_29,diagrams_representation_feature,docgen,PublishStep_32,PublishStep_33,docgen_features,BuildStep_35,PublishStep_36,composer_feature,BuildStep_38,PublishStep_39,transposer_feature,ad,PublishStep_42,PublishStep_43,PublishStep_44,ad_feature,ad_dsl,PublishStep_47,PublishStep_48,addsl_feature,detachment,PublishStep_51,detachment_feature,BuildStep_53,PublishStep_54,PublishStep_55,PublishStep_56,sdk_feature,AntStep_58,kitalpha,EgfStep_60,zip_juno_results" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,report_feature,emde,PublishStep_23,PublishStep_24,PublishStep_25,PublishStep_26,emde_feature,diagrams,PublishStep_29,diagrams_representation_feature,docgen,PublishStep_32,PublishStep_33,docgen_features,BuildStep_35,PublishStep_36,composer_feature,BuildStep_38,PublishStep_39,transposer_feature,ad,PublishStep_42,PublishStep_43,PublishStep_44,ad_feature,ad_dsl,PublishStep_47,PublishStep_48,addsl_feature,detachment,PublishStep_51,PublishStep_52,PublishStep_53,PublishStep_54,common_1_feature,detachment_feature,BuildStep_57,PublishStep_58,PublishStep_59,PublishStep_60,sdk_feature,AntStep_62,kitalpha,EgfStep_64,zip_juno_results" />
 	<target name="TP_juno" depends="TP_juno_TP_juno,TP_juno_install_cots_features,TP_juno_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
 	<target name="releng" depends="releng_BuildStep_1,releng_PublishStep_2,releng_build_feature" />
@@ -872,7 +872,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_53" depends="init,install.buckminster">
+    <target name="BuildStep_57" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -888,14 +888,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_53/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_57/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_53/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_57/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1576,7 +1576,94 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
+	<target name="PublishStep_52" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.model.common.commands.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.model.common.commands.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.model.common.commands.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.model.common.commands.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.model.common.commands.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_53" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.model.common.scrutiny.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.model.common.scrutiny.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.model.common.scrutiny.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.model.common.scrutiny.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.model.common.scrutiny.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
 	<target name="PublishStep_54" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.model.common.share.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.model.common.share.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.model.common.share.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.model.common.share.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.model.common.share.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_58" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1605,7 +1692,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_55" depends="init,install.buckminster" >
+	<target name="PublishStep_59" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1634,7 +1721,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_56" depends="init,install.buckminster" >
+	<target name="PublishStep_60" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1664,7 +1751,7 @@ This file was generated by Eclipse EGF
 	</target>
 
 
-	<target name="AntStep_58">
+	<target name="AntStep_62">
 		<antcall target="move_egf_to_tools2"/>
 	</target>
 
@@ -1673,7 +1760,7 @@ This file was generated by Eclipse EGF
 	<move file="${publish}/TP_build" tofile="${tools}/egf" />
 </target>
 
-	<target name="EgfStep_60" depends="init,install.egf">
+	<target name="EgfStep_64" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-DplatformPath=${publish}/TP_juno" />
@@ -1726,6 +1813,9 @@ This file was generated by Eclipse EGF
 				<repository location="file:/${publish}/org.polarsys.kitalpha.doc.gen.business.ecore.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.releng.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.commands.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.scrutiny.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.share.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -2429,6 +2519,50 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.ad.dsl.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.ad.dsl.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="common_1_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.commands.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.scrutiny.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.share.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.commands.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.commands.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.scrutiny.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.scrutiny.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.share.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.share.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
